--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 /* Header styles */
 header {
     background: linear-gradient(to right, ##b36e00, ##6e4400);
-    color: #black;
+    color: #white;
     padding: 10px 0;
     text-align: center;
 }
@@ -48,9 +48,51 @@ header nav ul li a {
 }
 
 header .profile-pic {
-    border-radius: 75%;
-    width: 100px;
-    height: 100px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+/* Header styles */
+header {
+    background: #333;
+    color: #white;
+    padding: 10px 0;
+    text-align: center;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+header nav ul {
+    list-style-type: none;
+}
+table, th, td {
+  border:1px solid black;
+text-align: center;
+
+}
+header nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+header nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+header .profile-pic {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
 
 /* Section Styles */
