--- a/style.css
+++ b/style.css
@@ -49,13 +49,13 @@ header nav ul li a {
 
 header .profile-pic {
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
 }
 
 /* Header styles */
 header {
-    background: #333;
+    background: #008f47;
     color: #white;
     padding: 10px 0;
     text-align: center;
@@ -91,8 +91,8 @@ header nav ul li a {
 
 header .profile-pic {
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
 }
 
 /* Section Styles */
