--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header nav ul {
     list-style-type: none;
 }
 table, th, td {
-  border:1px solid black;
+  border:1px solid blue;
 text-align: center;
 
 }
@@ -49,8 +49,8 @@ header nav ul li a {
 
 header .profile-pic {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
 }
 
 /* Header styles */
@@ -74,7 +74,7 @@ header nav ul {
     list-style-type: none;
 }
 table, th, td {
-  border:1px solid black;
+  border:1px solid blue;
 text-align: center;
 
 }
@@ -90,9 +90,9 @@ header nav ul li a {
 }
 
 header .profile-pic {
-    border-radius: 25%;
-    width: 75px;
-    height: 75px;
+    border-radius: 10%;
+    width: 50px;
+    height: 50px;
 }
 
 /* Section Styles */
