--- a/style.css
+++ b/style.css
@@ -40,7 +40,11 @@ h2 {
     margin-bottom: 2rem;
     color: #2c3e50;
 }
-
+h1{
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #2c3e50;
+} 
 /* Card styles */
 .card-container {
     display: grid;
